[gd_scene load_steps=7 format=3 uid="uid://4tcjyre0hoji"]

[ext_resource type="Theme" uid="uid://bql5sxaowafw3" path="res://resources/theme/wc3_theme.tres" id="1_3h6gw"]
[ext_resource type="Script" path="res://src/ui/top_left_menu/wave_status.gd" id="2_fsc15"]
[ext_resource type="PackedScene" uid="uid://213bkal0uk32" path="res://src/ui/top_left_menu/PlusModeLabel.tscn" id="3_27rq8"]
[ext_resource type="Script" path="res://src/ui/hud/rich_text_label_with_rich_tooltip.gd" id="3_crgv5"]

[sub_resource type="InputEventKey" id="InputEventKey_srlh2"]
device = -1
physical_keycode = 78
unicode = 110

[sub_resource type="Shortcut" id="Shortcut_u7iub"]
events = [SubResource("InputEventKey_srlh2")]

[node name="WaveStatus" type="VBoxContainer" node_paths=PackedStringArray("_label", "_start_game_button", "_start_next_wave_button", "_level_label", "_game_start_time_container", "_game_start_time_label", "_next_wave_time_container", "_next_wave_time_label", "_score_label", "_game_time_label", "_total_damage_label", "_gold_farmed_label")]
custom_minimum_size = Vector2(650, 0)
offset_right = 600.0
offset_bottom = 134.0
theme = ExtResource("1_3h6gw")
script = ExtResource("2_fsc15")
_label = NodePath("DetailsLabel")
_start_game_button = NodePath("HBoxContainer2/StartGameButton")
_start_next_wave_button = NodePath("HBoxContainer2/StartNextWaveButton")
_level_label = NodePath("HBoxContainer/LevelLabel")
_game_start_time_container = NodePath("HBoxContainer/GameStartTimeContainer")
_game_start_time_label = NodePath("HBoxContainer/GameStartTimeContainer/GameStartTimeLabel")
_next_wave_time_container = NodePath("HBoxContainer/NextWaveTimeContainer")
_next_wave_time_label = NodePath("HBoxContainer/NextWaveTimeContainer/NextWaveTimeLabel")
_score_label = NodePath("HBoxContainer2/VBoxContainer/GridContainer/HBoxContainer/ScoreLabel")
_game_time_label = NodePath("HBoxContainer2/VBoxContainer/GridContainer/HBoxContainer2/GameTimeLabel")
_total_damage_label = NodePath("HBoxContainer2/VBoxContainer/GridContainer/HBoxContainer3/TotalDamageLabel")
_gold_farmed_label = NodePath("HBoxContainer2/VBoxContainer/GridContainer/HBoxContainer4/GoldFarmedLabel")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 2

[node name="Label" type="Label" parent="HBoxContainer"]
layout_mode = 2
text = "WAVE_STATS_WAVE"

[node name="LevelLabel" type="Label" parent="HBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.84, 0, 1)
text = "1"

[node name="GameStartTimeContainer" type="HBoxContainer" parent="HBoxContainer"]
visible = false
layout_mode = 2

[node name="Label3" type="Label" parent="HBoxContainer/GameStartTimeContainer"]
layout_mode = 2
text = "WAVE_STATS_GAME_COUNT_DOWN"

[node name="GameStartTimeLabel" type="Label" parent="HBoxContainer/GameStartTimeContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.84, 0, 1)
text = "00:00"

[node name="NextWaveTimeContainer" type="HBoxContainer" parent="HBoxContainer"]
visible = false
layout_mode = 2

[node name="Label2" type="Label" parent="HBoxContainer/NextWaveTimeContainer"]
layout_mode = 2
text = "WAVE_STATS_WAVE_COUNT_DOWN"

[node name="NextWaveTimeLabel" type="Label" parent="HBoxContainer/NextWaveTimeContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.84, 0, 1)
text = "00:00"

[node name="PlusModeLabel" parent="HBoxContainer" instance=ExtResource("3_27rq8")]
layout_mode = 2

[node name="DetailsLabel" type="RichTextLabel" parent="."]
layout_mode = 2
theme_override_constants/table_h_separation = 20
bbcode_enabled = true
text = "[table=5][cell][color=GOLD]Level[/color][/cell][cell][color=GOLD]Size[/color][/cell][cell][color=GOLD]Race[/color][/cell][cell][color=GOLD]Armor[/color][/cell][cell][color=GOLD]Special[/color][/cell][cell]1[/cell][cell][color=GOLD]20[/color] [color=ffa500ff]Mass[/color][/cell][cell][color=32cd32ff]Nature[/color][/cell][cell][color=ff4500ff]Hel[/color][/cell][cell][hint=][/hint][/cell][cell]2[/cell][cell][color=GOLD]10[/color] [color=8fbc8fff]Normal[/color][/cell][cell][color=32cd32ff]Nature[/color][/cell][cell][color=ff4500ff]Hel[/color][/cell][cell][hint=][/hint][/cell][cell]3[/cell][cell][color=GOLD]20[/color] [color=ffa500ff]Mass[/color][/cell][cell][color=9370dbff]Undead[/color][/cell][cell][color=ff4500ff]Hel[/color][/cell][cell][hint=][/hint][/cell][cell]4[/cell][cell][color=GOLD]10[/color] [color=8fbc8fff]Normal[/color][/cell][cell][color=9370dbff]Undead[/color][/cell][cell][color=32cd32ff]Lua[/color][/cell][cell][hint=][/hint][/cell][cell]5[/cell][cell][color=GOLD]2[/color] [color=9370dbff]Champion[/color], [color=GOLD]6[/color] [color=8fbc8fff]Normal[/color][/cell][cell][color=6495edff]Magic[/color][/cell][cell][color=ffd700ff]Sol[/color][/cell][cell][hint=][/hint][/cell][/table]"
fit_content = true
scroll_active = false
autowrap_mode = 0
hint_underlined = false
script = ExtResource("3_crgv5")

[node name="HBoxContainer2" type="HBoxContainer" parent="."]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer2"]
layout_mode = 2

[node name="GridContainer" type="GridContainer" parent="HBoxContainer2/VBoxContainer"]
layout_mode = 2
columns = 2

[node name="HBoxContainer" type="HBoxContainer" parent="HBoxContainer2/VBoxContainer/GridContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="HBoxContainer2/VBoxContainer/GridContainer/HBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.84, 0, 1)
text = "WAVE_STATS_SCORE"

[node name="ScoreLabel" type="Label" parent="HBoxContainer2/VBoxContainer/GridContainer/HBoxContainer"]
layout_mode = 2
text = "11"

[node name="HBoxContainer2" type="HBoxContainer" parent="HBoxContainer2/VBoxContainer/GridContainer"]
layout_mode = 2

[node name="Label3" type="Label" parent="HBoxContainer2/VBoxContainer/GridContainer/HBoxContainer2"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.84, 0, 1)
text = "WAVE_STATS_GAME_TIME"

[node name="GameTimeLabel" type="Label" parent="HBoxContainer2/VBoxContainer/GridContainer/HBoxContainer2"]
layout_mode = 2
text = "03:07"

[node name="HBoxContainer3" type="HBoxContainer" parent="HBoxContainer2/VBoxContainer/GridContainer"]
layout_mode = 2

[node name="Label4" type="Label" parent="HBoxContainer2/VBoxContainer/GridContainer/HBoxContainer3"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.84, 0, 1)
text = "WAVE_STATS_TOTAL_DMG"

[node name="TotalDamageLabel" type="Label" parent="HBoxContainer2/VBoxContainer/GridContainer/HBoxContainer3"]
layout_mode = 2
text = "11"

[node name="HBoxContainer4" type="HBoxContainer" parent="HBoxContainer2/VBoxContainer/GridContainer"]
layout_mode = 2

[node name="Label5" type="Label" parent="HBoxContainer2/VBoxContainer/GridContainer/HBoxContainer4"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.84, 0, 1)
text = "WAVE_STATS_GOLD_FARMED"

[node name="GoldFarmedLabel" type="Label" parent="HBoxContainer2/VBoxContainer/GridContainer/HBoxContainer4"]
layout_mode = 2
text = "11"

[node name="Spacer" type="HBoxContainer" parent="HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3

[node name="StartGameButton" type="Button" parent="HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 4
tooltip_text = "WAVE_STATUS_TOOLTIP_NEXT_WAVE"
focus_mode = 0
theme_override_font_sizes/font_size = 25
shortcut = SubResource("Shortcut_u7iub")
shortcut_in_tooltip = false
text = "WAVE_STATS_START"

[node name="StartNextWaveButton" type="Button" parent="HBoxContainer2"]
visible = false
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 4
tooltip_text = "WAVE_STATUS_TOOLTIP_NEXT_WAVE"
focus_mode = 0
theme_override_font_sizes/font_size = 25
shortcut = SubResource("Shortcut_u7iub")
shortcut_in_tooltip = false
text = "WAVE_STATS_NEXT_WAVE"

[connection signal="pressed" from="HBoxContainer2/StartGameButton" to="." method="_on_start_game_button_pressed"]
[connection signal="pressed" from="HBoxContainer2/StartNextWaveButton" to="." method="_on_start_next_wave_button_pressed"]
